# uniTypes

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  rebuild_app_only.sh  rebuild_everything.sh
app/: main.cpp
include/: uniTypes.h  units.h
tests/: main.cpp
tests/include/: uniTypesTest.h  unitsTest.h
